--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<p>This is a paragraph.</p>
+<p>This is a Quiz application.</p>
 <p>This is a paragraph.</p>
 <p>This is a paragraph.</p>
 
